--- a/app/src/main/res/layout/main_drawer_layout.xml
+++ b/app/src/main/res/layout/main_drawer_layout.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
     <!--tools:openDrawer="start"-->
 
     <LinearLayout
@@ -59,7 +60,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.65" />
+                app:layout_constraintVertical_bias="0.84" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.design.widget.NavigationView>
